Fixed spacing for empty sink and discard piles. Before when there was an empty pile the piles would get all out of line.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -98,13 +98,12 @@
 }
 
 .empty_sink{
-    color: white;
-    padding: 1px;
-    /*border-style: solid;*/
-    border: 1px solid black;
-    box-sizing: border-box;
+    display: block;
+    text-align: center;
+    padding: 0px;
+    margin: 0px;
     font-size: 60px;
-    position:absolute;
+    color: white;
 }
 
 
@@ -340,7 +339,7 @@
     right: 1%;
     top: 10%;
     margin-right: 5px;
-    width: 16%;
+    width: 18%;
     height: 15%;
 }
 
@@ -353,7 +352,7 @@
     right: 1%;
     top: 35%;
     margin-right: 5px;
-    width: 16%;
+    width: 18%;
     height: 15%;
 }
 
